// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`utils/reason.ts formatReason - should format the notification reason 1`] = `
{
  "description": "You were requested to review and approve a deployment.",
  "title": "Approval Requested",
}
`;

exports[`utils/reason.ts formatReason - should format the notification reason 2`] = `
{
  "description": "You were assigned to the issue.",
  "title": "Assigned",
}
`;

exports[`utils/reason.ts formatReason - should format the notification reason 3`] = `
{
  "description": "You created the thread.",
  "title": "Authored",
}
`;

exports[`utils/reason.ts formatReason - should format the notification reason 4`] = `
{
  "description": "A GitHub Actions workflow run was triggered for your repository.",
  "title": "Workflow Run Completed",
}
`;

exports[`utils/reason.ts formatReason - should format the notification reason 5`] = `
{
  "description": "You commented on the thread.",
  "title": "Commented",
}
`;

exports[`utils/reason.ts formatReason - should format the notification reason 6`] = `
{
  "description": "You accepted an invitation to contribute to the repository.",
  "title": "Invitation Received",
}
`;

exports[`utils/reason.ts formatReason - should format the notification reason 7`] = `
{
  "description": "You subscribed to the thread (via an issue or pull request).",
  "title": "Updated",
}
`;

exports[`utils/reason.ts formatReason - should format the notification reason 8`] = `
{
  "description": "Organization members have requested to enable a feature such as Draft Pull Requests or Copilot.",
  "title": "Member Feature Requested",
}
`;

exports[`utils/reason.ts formatReason - should format the notification reason 9`] = `
{
  "description": "You were specifically @mentioned in the content.",
  "title": "Mentioned",
}
`;

exports[`utils/reason.ts formatReason - should format the notification reason 10`] = `
{
  "description": "You, or a team you're a member of, were requested to review a pull request.",
  "title": "Review Requested",
}
`;

exports[`utils/reason.ts formatReason - should format the notification reason 11`] = `
{
  "description": "You were credited for contributing to a security advisory.",
  "title": "Security Advisory Credit Received",
}
`;

exports[`utils/reason.ts formatReason - should format the notification reason 12`] = `
{
  "description": "GitHub discovered a security vulnerability in your repository.",
  "title": "Security Alert Received",
}
`;

exports[`utils/reason.ts formatReason - should format the notification reason 13`] = `
{
  "description": "You changed the thread state (for example, closing an issue or merging a pull request).",
  "title": "State Changed",
}
`;

exports[`utils/reason.ts formatReason - should format the notification reason 14`] = `
{
  "description": "You're watching the repository.",
  "title": "Updated",
}
`;

exports[`utils/reason.ts formatReason - should format the notification reason 15`] = `
{
  "description": "You were on a team that was mentioned.",
  "title": "Team Mentioned",
}
`;

exports[`utils/reason.ts formatReason - should format the notification reason 16`] = `
{
  "description": "The reason for this notification is not supported by the app.",
  "title": "Unknown",
}
`;
